# Giggity

./: .gitignore  Cargo.toml  README.md  flake.nix  giggity.tmux
.github/workflows/: ci.yml
crates/giggity-cli/: Cargo.toml
crates/giggity-cli/src/: install.rs  main.rs  popup.rs  test_support.rs
crates/giggity-cli/tests/: cli_smoke.rs  daemon_signals.rs
crates/giggity-collectors/: Cargo.toml
crates/giggity-collectors/src/: command.rs  containers.rs  host.rs  kubernetes.rs  lib.rs  probes.rs  service_managers.rs
crates/giggity-core/: Cargo.toml
crates/giggity-core/src/: config.rs  lib.rs  model.rs  protocol.rs  state.rs  test_support.rs  view.rs
crates/giggity-daemon/: Cargo.toml
crates/giggity-daemon/src/: daemon.rs  lib.rs
examples/: config.toml
examples/containers/: compose.yaml
examples/containers/basic-http/: Dockerfile  index.html
scripts/: bootstrap.sh  popup.sh  render.sh  runtime-fixture.sh  smoke-runtime.sh
