[workspace]
members = [
  "crates/giggity-cli",
  "crates/giggity-collectors",
  "crates/giggity-core",
  "crates/giggity-daemon",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Q <jahquan@users.noreply.github.com>"]
repository = "https://github.com/jahquan/giggity"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bollard = "0.20.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
crossterm = "0.29.0"
directories = "6.0.0"
futures-util = "0.3.31"
proptest = "1.9.0"
ratatui = "0.30.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.16"
tokio = { version = "1.50.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = { version = "2.5.7", features = ["serde"] }

