[package]
name = "giggity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
giggity-core = { path = "../giggity-core" }
giggity-daemon = { path = "../giggity-daemon" }
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
async-trait.workspace = true
giggity-collectors = { path = "../giggity-collectors" }
tempfile.workspace = true
