[package]
name = "giggity-collectors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bollard.workspace = true
chrono.workspace = true
futures-util.workspace = true
giggity-core = { path = "../giggity-core" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
