[package]
name = "giggity-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
giggity-collectors = { path = "../giggity-collectors" }
giggity-core = { path = "../giggity-core" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
